tests/ui/const-generics/infer/one-param-uninferred.stderr
error[E0284]: type annotations needed
  --> $DIR/one-param-uninferred.rs:9:23
   |
LL |     let _: [u8; 17] = foo();
   |                       ^^^ cannot infer the value of the const parameter `M` declared on the function `foo`
   |
note: required by a const generic parameter in `foo`
  --> $DIR/one-param-uninferred.rs:2:24
   |
LL | fn foo<const N: usize, const M: usize>() -> [u8; N] {
   |                        ^^^^^^^^^^^^^^ required by this const generic parameter in `foo`
help: consider specifying the generic arguments
   |
LL |     let _: [u8; 17] = foo::<17, M>();
   |                          +++++++++

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0284`.
